- Add about page - Fix 60-sec bug on iPhone 3.5 inches screen -Add cancel button on 60-sec mode

--- a/css/style.css
+++ b/css/style.css
@@ -435,8 +435,14 @@
     
 }
 
+
+
 .align-left{
 	text-align: left;
+}
+
+.align-right{
+    text-align: right;
 }
 
 .align-center{
